charts/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "networktools"
  namespace: nwtools
spec:
  selector:
    matchLabels:
      app: "networktools-label"
  replicas: 1
  template:
    metadata:
      labels:
        app: "networktools-label"
    spec:
      containers:
        - name: networktools
          image: ghcr.io/nishantapatil3/networktools:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
