charts/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: networktools-service
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: networktools-label
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 80
