charts/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: networktools-ingress
  namespace: nwtools
spec:
  rules:
  - http:
      paths:
      - path: /nwt
        pathType: Prefix
        backend:
          service:
            name: networktools-service
            port:
              number: 8080
